--- a/Deluged/Dockerfile
+++ b/Deluged/Dockerfile
@@ -1,13 +1,14 @@
+# Uses alpine for a small image size
 FROM alpine:edge
 
-# Add the testing repository, install deluge, and start daemon
+# Add the testing repository, download deluge, then set config to allow remote connections.
 RUN echo http://dl-cdn.alpinelinux.org/alpine/edge/testing >> /etc/apk/repositories && \
     apk update && \
     apk add --no-cache deluge && \
-    deluged
-
-# Set config to allow remote connections and kill the daemon process
-RUN deluge-console config -s allow_remote True && \
+    deluged && \
+    sleep 5 && \
+    deluge-console config -s allow_remote True && \
+    sleep 5 && \
     pkill deluged
 
 # Expose the deluge remote access port
@@ -15,4 +16,3 @@ EXPOSE 58846
 
 # Run the deluged process in the foreground
 CMD ["deluged", "--do-not-daemonize"]
-
